miscellaneous layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@ h2 {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #2f004f;
+	background-color: #2f004f;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
