--- a/src/Logdisplay/LogDisplay.css
+++ b/src/Logdisplay/LogDisplay.css
@@ -16,10 +16,12 @@ select {
     cursor: pointer;
     margin: 10px;
     width: 33%;
+    
 }
 
 option {
     cursor: pointer;
+    
 }
 
 .log-display-list {
@@ -47,7 +49,24 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
   }
 
+th {
+    background-color: #f2f2f2;
+}
+
 button.display-logs {
     margin: 10px;
+}
+
+.sugar-log-submit,
+.med-log-submit,
+.meal-log-submit {
+    border: 1px solid #2f004f;
+    background-color:  #2f004f;
+}
+
+section.sugar-levels,
+section.meals,
+section.med-regimens {
+    width: 50%;
 }
 
